<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">CPTM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="base_url">http://www.smartthinking.com.mx:8080/Cptm/DataSMobile?</string>
    <string name="base_img">http://www.smartthinking.com.mx:8080/Cptm/</string>
    <string name="base_img_carrusel">http://www.smartthinking.com.mx:8080/Cptm</string>

    <!-- Textos para parametros -->
    <string name="espacio_prefs">CPTM_PrefSpace</string>
    <string name="pref_idusuario">i_u_act</string>
    <string name="sts_id">sts_id</string>


    <!-- Textos para la NavigationView -->
    <string name="nav_item_ferias_int">Ferias Internacionales</string>
    <string name="nav_item_ferias_nac">Ferias Nacionales</string>
    <string name="nav_item_calendario">Calendario</string>
    <string name="nav_item_mis_eventos">Mis eventos</string>
    <string name="nav_item_mi_perfil">Mi perfil</string>
    <string name="nav_button_login">Iniciar sesión</string>
    <string name="nav_button_logout">Cerrar sesión</string>

    <string name="frag1">Ferias Internacionales</string>
    <string name="frag2">Ferias Nacionales</string>
    <string name="frag3">Noticias</string>
    <string name="frag4">Ingresa</string>
    <string name="link">www.visitmexico.com</string>

    <string name="cond">
      <![CDATA[
        Al dar clic en <b>Registra</b> aceptas las <font color="#1CA8B8"><b>Conidiciones de servicio</b></font>
      ]]>
    </string>
    <string name="priv">
      <![CDATA[
        y <font color="#1CA8B8"><b>Política de Privacidad</b></font>.
      ]]>
    </string>
    <string name="login_text">
      <![CDATA[
        <font color="#FFFFFF"><b>¿Problemas con el inicio de sesión?</b></font>
      ]]>
    </string>
    <string name="login_text2">
      <![CDATA[
        <font color="#FFFFFF"><b>¿Aún no tienes cuenta?</b></font>
      ]]>
    </string>

    <string name="consCebPaco">Directivos de Cebollas Paco:</string>
    <string name="recupera_psw">Escribe la dirección con la cual te registraste, para enviarte un correo con tus datos.</string>
    <string name="inscri_eve">Datos de contacto, para seguimiento de participación en la feria.</string>

    <!-- Textos de la UI Mi Perfil -->
    <string name="perfil_cab">Mi Perfil</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_empresa">Empresa</string>
    <string name="perfil_telefono">Telefono</string>
    <string name="perfil_correo">Correo electrónico</string>
    <string name="perfil_contrasenia">Contraseña</string>
    <string name="perfil_conf_contrasenia">Confirmar contraseña</string>
    <string name="perfil_cargo">Cargo</string>
    <string name="perfil_rfc">RFC</string>
    <string name="perfil_rs">Razón social</string>
    <string name="perfil_calle">Calle</string>
    <string name="perfil_colonia">Colonia</string>
    <string name="perfil_num_ext">Número exterior</string>
    <string name="perfil_num_int">Número interior</string>
    <string name="perfil_codigo_post">Código postal</string>
    <string name="perfil_municipio">Municipio</string>
    <string name="perfil_estado">Estado</string>
    <string name="perfil_delegacion">Delegación</string>
    <string name="perfil_codigo">Código</string>
    <string name="perfil_pais">País</string>
    <string name="perfil_pagina">Página Web</string>
    <string name="perfil_actividad">Actividad</string>
    <string name="perfil_d_cuenta">Cuenta</string>
    <string name="perfil_d_contacto">Contacto</string>
    <string name="perfil_d_compania">Datos de la compañia</string>
    <string name="perfil_d_fiscales">Datos de facturación</string>
    <string name="perfil_act">Actualizar perfil</string>
    <string name="perfil_guardar">Guardar datos</string>
    <string name="perfil_eliminar">Eliminar datos</string>
    <string name="perfil_term">Condiciones del Servicio y Politica de Privacidad</string>

    <!-- Textos de la UI Noticias -->
    <string name="noticias_cab">Noticias</string>

    <!-- Textos de la UI Noticia -->
    <string name="noticia_cab">Noticia</string>
    <string name="noticia_contenido">Lorem ipsum dolor sit amet, consectetur adipiscing</string>

    <!-- Textos de la UI Patrocinadores -->
    <string name="patrocinadores_cab">Patrocinadores</string>
    <string name="patrocinadores_list_cab_pat">Patrocinador</string>
    <string name="patrocinadores_list_cab_cita">Cita</string>
    <string name="patrocinadores_list_cab_enlace">Enlace</string>

    <!-- Textos de la UI Ponentes -->
    <string name="ponentes_cab">Ponentes</string>
    <string name="ponentes_list_cab_pon">Ponente</string>
    <string name="ponentes_list_cab_cita">Cita</string>

    <!-- Textos de la UI Ponente -->
    <string name="ponente_cab">Ponente</string>
    <string name="ponencias_cab">Ponencias</string>
    <string name="ponencia_list_cab_pon">Ponencia y lugar</string>
    <string name="ponencia_list_cab_fecha">Fecha</string>

    <!-- Textos de la UI Encuestas -->
    <string name="encuestas_cab">Encuestas</string>
    <string name="encuestas_pregunta_1">Este es un texto de prueba</string>
    <string name="encuestas_pregunta_2">Este es otro texto de prueba</string>
    <string name="encuestas_respuesta">Respuesta</string>
    <string name="boton_terminar">Terminar</string>

    <!-- Textos de la UI Programa -->
    <string name="programa_cab">Programa</string>
    <string name="programa_list_cab_dia_nf">Día</string>
    <string name="programa_list_cab_horario">Horario</string>
    <string name="programa_list_cab_dia">Día: <xliff:g id="dia">%d</xliff:g></string>
    <string name="evento_cab">Evento</string>
    <string name="eventos_cab">Mis Eventos</string>

    <!-- Textos de la UI de los items de las listas -->
    <!-- noticias -->
    <string name="noticias_item_titulo">Titulo del artículo</string>
    <string name="noticias_item_subtitulo">Julio 15, 2015</string>
    <string name="noticias_item_cd_foto">Foto de noticia</string>
    <string name="noticias_item_cd_boton">Ir a noticia</string>
    <string name="noticias_cab_item_titulo">Julio, 2015</string>
    <string name="noticias_cab_item_subtitulo">Ir a sitio</string>
    <!-- patrocinadores -->
    <string name="patrocinadores_item_nombre">Nombre</string>
    <string name="patrocinadores_item_numero">Número</string>
    <string name="patrocinadores_item_cd_foto">Foto del patrocinador</string>
    <!-- ponentes -->
    <string name="ponentes_item_nombre">Nombre</string>
    <string name="ponentes_item_puesto">Empresa, Puesto</string>
    <string name="ponentes_item_cd_foto">Foto del ponente</string>
    <!-- programa -->
    <string name="programa_item_horario"><xliff:g id="hora">%d</xliff:g>:<xliff:g id="minutos">%d</xliff:g></string>
    <string name="programa_item_nombre">Nombre del evento</string>
    <string name="programa_item_sala">Sala (opcional)</string>
    <!-- ferias int -->
    <string name="fi_item_titulo">Titulo feria</string>
    <string name="fi_item_subtitulo">Agosto 15, 2015</string>
    <string name="fi_item_cd_foto">Foto de feria</string>
    <string name="fi_item_cd_boton">Fecha</string>
    <string name="fi_cab_item_titulo">Agosto, 2015</string>
    <string name="fi_cab_item_subtitulo">Fecha sitio</string>
    <string-array name="valores_array">
        <item>Elem1</item>
        <item>Elem2</item>
        <item>Elem3</item>
        <item>Elem4</item>
        <item>Elem5</item>
    </string-array>

    <!-- Recinto -->
    <string name="recinto_cab">Recinto</string>
    <string name="recinto_desc">Descripción</string>
    <string name="recinto_ubic">Ubicación</string>
    <string name="recinto_cont">Contacto</string>
    <string name="recinto_tel">Telefono: </string>
    <string name="recinto_mail">Email: </string>
    <string name="recinto_fb">Facebook: </string>
    <string name="recinto_tw">Twitter: </string>

    <!-- Agenda -->
    <string name="agenda_cab">Agenda Salas de Reuniones</string>

</resources>
