<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:background="@color/cab_perfil"
        android:drawableLeft="@drawable/head_profile_st"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="@string/perfil_cab"
        android:textSize="20sp"
        android:textColor="@android:color/white" />


    <ScrollView
        android:background="@android:color/white"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Separador de sección -->
            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:text="@string/perfil_d_cuenta"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_correo"
                android:inputType="textEmailAddress|textAutoComplete"
                android:hint="@string/perfil_correo"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_contrasenia"
                android:inputType="textPassword"
                android:hint="@string/perfil_contrasenia"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_conf_contrasenia"
                android:inputType="textPassword"
                android:hint="@string/perfil_conf_contrasenia"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <!-- Separador -->
            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:text="@string/perfil_d_contacto"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <!-- -->

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_nombre"
                android:inputType="textCapWords|textAutoComplete"
                android:hint="@string/perfil_nombre"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_cargo"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_cargo"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_telefono"
                android:inputType="phone|textAutoComplete"
                android:hint="@string/perfil_telefono"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <!-- Separador -->
            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:text="@string/perfil_d_compania"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <!-- -->

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_nombre_comp"
                android:inputType="textCapWords|textAutoComplete"
                android:hint="@string/perfil_nombre"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_calle_comp"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_calle"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_num_ext"
                android:inputType="phone|textAutoComplete"
                android:hint="@string/perfil_num_ext"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_num_int"
                android:inputType="phone|textAutoComplete"
                android:hint="@string/perfil_num_int"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_codigo_comp"
                android:inputType="phone|textAutoComplete"
                android:hint="@string/perfil_codigo_post"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_colonia_comp"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_colonia"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_municipio"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_municipio"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_estado"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_estado"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_pais"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_pais"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_pagina"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_pagina"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <EditText
                android:background="@drawable/field_profile"
                android:id="@+id/perfil_actividad"
                android:inputType="textCapSentences|textAutoComplete"
                android:hint="@string/perfil_actividad"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textSize="16dp"/>

            <!-- Separador de sección -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/perfil_d_fiscales"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/perfil_boton_agregar_datos"
                    android:background="@color/cab_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/action_eventadd_clear"/>

            </LinearLayout>
            <!-- -->

            <android.support.v4.view.ViewPager
                android:id="@+id/perfil_df_contenedor"
                android:layout_width="match_parent"
                android:layout_height="750dp"/>

            <Button
                android:background="@drawable/botonpulsado"
                android:id="@+id/perfil_boton_actualizar"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:text="@string/perfil_act"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:background="@drawable/boton_condiciones"
                android:id="@+id/perfil_boton_terminos"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:text="@string/perfil_term"
                android:textSize="14sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>