<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_international_clear"
            android:title="@string/frag1"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/menu_nacional_clear"
            android:title="@string/frag2"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_event_amar"
            android:title="@string/frag3" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/menu_profile_clear"
            android:title="@string/frag4" />
    </group>

    <!--item android:title="Items secundarios">
        <menu>
            <item
                android:id="@+id/aditional1"
                android:icon="@drawable/ic_dashboard"
                android:title="Adicional 1" />
            <item
                android:id="@+id/aditional2"
                android:icon="@drawable/ic_forum"
                android:title="Adicional 2" />
        </menu>
    </item-->

</menu>