<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/cab_noticia"
        android:drawableLeft="@drawable/head_noticias"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="@string/noticia_cab"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <ImageView
        android:background="@color/default_fondo_img"
        android:contentDescription="@string/noticias_item_cd_foto"
        android:id="@+id/noticia_foto"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:scaleType="centerCrop"/>

    <View
        android:background="@color/cab_noticia"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/noticia_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noticias_item_titulo"
                android:textColor="@android:color/black"
                android:textSize="16dp"/>

            <TextView
                android:id="@+id/noticia_fecha"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/noticias_item_subtitulo"
                android:textColor="@android:color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/noticia_contenido"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/noticia_contenido"
                android:textColor="@android:color/black"
                android:textSize="16dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>