<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:background="@drawable/field_login"
        android:gravity="center"
        android:id="@+id/list_programa_horario"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/programa_item_horario"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/list_programa_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/programa_item_nombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_progra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/programa_item_sala"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>